# lemoncake

./: .gitignore  404.html  Cargo.toml  GNUmakefile  LICENSE  README.md  SYSCALLS.md  build  build.rs  check_header.py  grub.cfg  index.html  init.asm  license.html  limine.conf  linker.ld  main.py  proj.sublime-project  proj.sublime-workspace  utils.py  x86_64-lemoncake.json
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: ascii_art.txt  font.psf  main.js  style.css  style_light.css
kernel/: Cargo.toml  build  build.rs  header.S  linker-x86_64.ld  linker.ld  x86_64-lemoncake.json
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  ahci.rs  apic.rs  commandline.rs  display.rs  elf.rs  executor.rs  font.rs  gdt.rs  interrupts.rs  keyboard.rs  logging.rs  main.rs  memory.rs  pci.rs  png.rs  serial.rs  sleep.rs  syscall.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
kernel/src/disks/: ahci.rs  mod.rs  nvme.rs
kernel/src/drivers/: ide.rs  mod.rs  nvme.rs  rtl8139.rs  ustar.rs
kernel/src/fs/: SHFS.md  ext2.rs  fat.rs  mod.rs  sfs.rs  shfs.rs
src/: acpi.rs  base64.rs  command_line.rs  display.rs  executor.rs  fonts.rs  interrupts.rs  kernel_booting.rs  lib.rs  main.rs  pci.rs  vga.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/asm/: boot.S  boot.asm
src/disks/: ahci.rs  mod.rs
src/fs/: mod.rs  shfs.rs
static/: main.js
templates/: 404.html  index.html  license.html
