[package]
name = "lemoncake"
version = "25.3.0-UEFI"
edition = "2024"

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
pic8259 = "0.11.0"
spin = "0.9.8"
#volatile = "0.2.6"
x86_64 = "0.15.2"
pc-keyboard = "0.8.0"
conquer-once = { version = "0.4.0", default-features = false }
#bitfield-struct = "0.10.1"
log = "0.4.21"
uart_16550 = "0.3.2"
uefi-raw = "0.10.0"

[dependencies.fontdue]
version = "0.9.3"
default-features = false
features = ["hashbrown"]

[dependencies.uefi]
version = "0.34.1"
features = ["logger", "global_allocator", "unstable", "alloc"]

[dependencies.crossbeam-queue]
version = "0.3.12"
default-features = false
features = ["alloc", "nightly"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
