[package]
name = "bootloader-testing"
version = "0.1.0"
edition = "2024"

[build-dependencies.kernel]
path = "kernel"
artifact = "bin"
target = "x86_64-unknown-none"
default-features = false
features = ["catppuccin-colorscheme", "serial-faces"]

[build-dependencies]
bootloader = "0.11.12"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = ["kernel"]
