[package]
name = "kernel"
version = "25.6.0"
edition = "2024"

[build-dependencies]
cc = "1.2.26"

[dependencies]
bitfield = "0.19.1"
bootloader_api = "0.11.10"
linked_list_allocator = "0.10.5"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.10.0"
spinning_top = "0.3.0"
uart_16550 = "0.3.2"
volatile = "0.2.6"
x86_64 = "0.15.2"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.12"
default-features = false
features = ["alloc", "nightly"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[features]
default = ["serial-faces", "status-faces"]
serial-faces = []
status-faces = []