[package]
name = "kernel"
version = "25.10.0"
edition = "2024"

[dependencies]
acpi = "5.2.0"
aml = "0.16.4"
bitfield = "0.19.1"
bootloader_api = "0.11.12"
linked_list_allocator = "0.10.5"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
raw-cpuid = "10.2.0"
spin = "0.10.0"
spinning_top = "0.3.0"
uart_16550 = "0.4.0"
volatile = "0.2.6"
x86_64 = "0.15.2"

[dependencies.strum]
version = "0.27.1"
default-features = false

[dependencies.strum_macros]
version = "0.27.1"
default-features = false

[dependencies.goblin]
version = "0.10.0"
default-features = false
features = ["elf32", "elf64", "endian_fd"]

[dependencies.zune-png]
version = "0.4.10"
default-features = false

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.12"
default-features = false
features = ["alloc", "nightly"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[features]
default = ["serial-faces", "status-faces", "catppuccin-colorscheme"]
serial-faces = []
status-faces = []
clear-on-scroll = []
catppuccin-colorscheme = []
